--- a/css/styles.css
+++ b/css/styles.css
@@ -342,6 +342,10 @@ ul {
   text-align: center;
   font-size: 2.5rem; }
 
+.margin-clase-2 {
+  text-align: center;
+  font-size: 2rem; }
+
 .margin-clase-grande {
   font-size: 7rem;
   text-align: center;
