--- a/scss/base/_general.scss
+++ b/scss/base/_general.scss
@@ -130,6 +130,11 @@ ul {
     font-size: 2.5rem;
 }
 
+.margin-clase-2 {
+    text-align: center;
+    font-size: 2rem;
+}
+
 .margin-clase-grande {
     font-size: 7rem;
     text-align: center;
